--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,128 @@
-<p>register works!</p>
+<div class="container">
+    <div class="row main">
+        <div class="panel-heading">
+           <div class="panel-title text-center">
+                   <h1 class="title">Jere Web 3000</h1>
+                   <hr />
+               </div>
+        </div> 
+        <div class="main-login main-center">
+            <form class="form-horizontal" method="post" action="#">
+                
+                <div class="form-group">
+                    <label for="username" class="cols-sm-2 control-label">Nombre de usuario</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormRegister.username" 
+                            name="username"
+                            id="username"
+                            tabindex="1"
+                            placeholder="Introduce tu nombre de usuario"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="cols-sm-2 control-label">Email</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormRegister.email" 
+                            name="email"
+                            id="email"
+                            tabindex="2"
+                            placeholder="Introduce tu Email"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="firstname" class="cols-sm-2 control-label">Nombre</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormRegister.firstname" 
+                            name="name"
+                            id="name"
+                            tabindex="3"
+                            placeholder="Introduce tu nombre"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="lastname" class="cols-sm-2 control-label">Apellidos</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormRegister.lastname" 
+                            name="lastname"
+                            id="lastname"
+                            tabindex="4"
+                            placeholder="Introduce tus apellidos"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="country" class="cols-sm-2 control-label">Pais</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormRegister.country" 
+                            name="username"
+                            id="username"
+                            tabindex="5"
+                            placeholder="Introduce tu pais"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="password" class="cols-sm-2 control-label">Password</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormRegister.password" 
+                            name="password"
+                            id="password"
+                            tabindex="6"
+                            placeholder="Introduce tu nombre"/>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <div class="form-group">
+                    <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                            <input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class="form-group ">
+                    <button type="button" class="btn btn-primary btn-lg btn-block login-button" (click)="userRegister(FormRegister)">Register</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
