--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,54 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row main">
+        <div class="panel-heading">
+           <div class="panel-title text-center">
+                   <h1 class="title">Jere Web 3000</h1>
+                   <hr />
+               </div>
+        </div> 
+        <div class="main-login main-center">
+            <form class="form-horizontal" method="post" action="#">
+                
+                <div class="form-group">
+                    <label for="username" class="cols-sm-2 control-label">Nombre de usuario</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormLogin.username" 
+                            name="username"
+                            id="username"
+                            tabindex="1"
+                            placeholder="Introduce tu nombre de usuario"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="password" class="cols-sm-2 control-label">Password</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                            <input 
+                            type="text" 
+                            class="form-control input-lg"  
+                            [(ngModel)]="FormLogin.password" 
+                            name="password"
+                            id="password"
+                            tabindex="2"
+                            placeholder="Introduce la contraseña"/>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="form-group ">
+                    <button type="button" class="btn btn-primary btn-lg btn-block login-button" (click)="userLogin(FormLogin)">Log-in</button>
+                    <button type="button" class="btn btn-success btn-lg btn-block login-button" style="margin-left: 30px;" (click)="registerNavigate()">Register</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
