--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -84,8 +84,8 @@
                             type="text" 
                             class="form-control input-lg"  
                             [(ngModel)]="FormRegister.country" 
-                            name="username"
-                            id="username"
+                            name="country"
+                            id="country"
                             tabindex="5"
                             placeholder="Introduce tu pais"/>
                         </div>
@@ -121,6 +121,7 @@
 
                 <div class="form-group ">
                     <button type="button" class="btn btn-primary btn-lg btn-block login-button" (click)="userRegister(FormRegister)">Register</button>
+                    <button type="button" class="btn btn-success btn-lg btn-block login-button" style="margin-left: 30px;" (click)="loginNavigate()">Log-in</button>
                 </div>
             </form>
         </div>
