example window done

--- a/src/app/components/mainwindow/mainwindow.component.html
+++ b/src/app/components/mainwindow/mainwindow.component.html
@@ -1,1 +1,13 @@
-<p>mainwindow works!</p>
+<div class="card text-center">
+    <div class="card-header">
+      Encabezado de carta
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Ventana de inicio</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur, 
+        adipisicing elit. Similique ea facilis, 
+        et ad amet laudantium obcaecati illum atque dolore enim ipsam accusantium reprehenderit
+         cumque voluptate necessitatibus voluptates voluptatibus culpa consectetur?</p>
+      <button type="button" class="btn btn-success btn-lg btn-block login-button" (click)="registerNavigate()">Logout</button>
+    </div>
+  </div>
