added token service, changed mainwindow to show uservalues

--- a/src/app/components/mainwindow/mainwindow.component.html
+++ b/src/app/components/mainwindow/mainwindow.component.html
@@ -10,4 +10,11 @@
          cumque voluptate necessitatibus voluptates voluptatibus culpa consectetur?</p>
       <button type="button" class="btn btn-success btn-lg btn-block login-button" (click)="registerNavigate()">Logout</button>
     </div>
+    <div>
+      <h1>Datos personales</h1>
+      <p><b>Nombre usuario: </b>{{user.username}}</p>
+      <p><b>Nombre: </b>{{user.firstname}}</p>
+      <p><b>Apellidos: </b>{{user.lastname}}</p>
+      <p><b>Email: </b>{{user.email}}</p>
+    </div>
   </div>
