angular guard done

--- a/src/app/components/mainwindow/mainwindow.component.html
+++ b/src/app/components/mainwindow/mainwindow.component.html
@@ -16,5 +16,6 @@
       <p><b>Nombre: </b>{{user.firstname}}</p>
       <p><b>Apellidos: </b>{{user.lastname}}</p>
       <p><b>Email: </b>{{user.email}}</p>
+      <p><b>Pais: </b>{{user.country}}</p>
     </div>
   </div>
